Se agrega seteo de valores para equipos y cálculo de puntajes
Se agregan métodos a EquipoRepository que hacen posible el cálculo de puntaje de equipos y preparación de tabla de posiciones. Se agrega el botón y se lee la tabla de posiciones para el Grupo A en la consola

--- a/src/fixture/view/Ventana.form
+++ b/src/fixture/view/Ventana.form
@@ -902,6 +902,19 @@
                         </Constraint>
                       </Constraints>
                     </Component>
+                    <Component class="javax.swing.JButton" name="btnVerTablaDePoscionesA">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Ver tabla de posiciones"/>
+                      </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVerTablaDePoscionesAActionPerformed"/>
+                      </Events>
+                      <Constraints>
+                        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                          <AbsoluteConstraints x="500" y="450" width="-1" height="-1"/>
+                        </Constraint>
+                      </Constraints>
+                    </Component>
                   </SubComponents>
                 </Container>
                 <Container class="javax.swing.JPanel" name="panelGrupoB">
